# family_finance

./: .env.example  .gitignore  Dockerfile  README.md  Taskfile.yml  docker-compose-dev.yaml  docker-compose.yaml  pyproject.toml  todo.md
app/: consts.py  main.py  pydantic_models.py  sql_scripts.py  telegram_api.py  utils.py
