[project]
name = "family_finance"
version = "0.1.0"
description = "Accounting of family's expenses"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[dependency-groups]
dev = [
    "pyright==1.1.407",
    "ruff==0.14.8",
]


### Pytest
### https://docs.pytest.org/en/8.0.x/explanation/goodpractices.html
[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
asyncio_default_fixture_loop_scope = "function"


### Ruff
### https://docs.astral.sh/ruff/configuration/
[tool.ruff]

# https://docs.astral.sh/ruff/settings/#top-level
indent-width = 4
line-length = 80
required-version = "0.14.8" # Ruff version
target-version = "py313"

# https://docs.astral.sh/ruff/settings/#format
[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = false

# https://docs.astral.sh/ruff/settings/#lint
[tool.ruff.lint]
select = [
  "A",     # https://docs.astral.sh/ruff/rules/#flake8-builtins-a
  "ANN",   # https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
  "ARG",   # https://docs.astral.sh/ruff/rules/#flake8-unused-arguments-arg
  "ASYNC", # https://docs.astral.sh/ruff/rules/#flake8-async-async
  "B",     # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
  "BLE",   # https://docs.astral.sh/ruff/rules/#flake8-blind-except-bleo
  "C4",    # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
  "C90",   # https://docs.astral.sh/ruff/rules/#mccabe-c90
  "COM",   # https://docs.astral.sh/ruff/rules/#flake8-commas-com
  "D",     # https://docs.astral.sh/ruff/rules/#pydocstyle-d
  "DTZ",   # https://docs.astral.sh/ruff/rules/#flake8-datetimez-dtz
  "E",     # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
  "F",     # https://docs.astral.sh/ruff/rules/#pyflakes-f
  "FIX",   # https://docs.astral.sh/ruff/rules/#flake8-fixme-fix
  "I",     # https://docs.astral.sh/ruff/rules/#isort-i
  "ICN",   # https://docs.astral.sh/ruff/rules/#flake8-import-conventions-icn
  "N",     # https://docs.astral.sh/ruff/rules/#pep8-naming-n
  "PIE",   # https://docs.astral.sh/ruff/rules/#flake8-pie-pie
  "PL",    # https://docs.astral.sh/ruff/rules/#pylint-pl
  "PT",    # https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt
  "PTH",   # https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
  "Q",     # https://docs.astral.sh/ruff/rules/#flake8-quotes-q
  "RET",   # https://docs.astral.sh/ruff/rules/#flake8-return-ret
  "RSE",   # https://docs.astral.sh/ruff/rules/#flake8-raise-rse
  "RUF",   # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
  "S",     # https://docs.astral.sh/ruff/rules/#flake8-bandit-s
  "SIM",   # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
  "SLF",   # https://docs.astral.sh/ruff/rules/#flake8-self-slf
  "T10",   # https://docs.astral.sh/ruff/rules/#flake8-debugger-t10
  "T20",   # https://docs.astral.sh/ruff/rules/#flake8-print-t20
  "TID",   # https://docs.astral.sh/ruff/rules/#flake8-tidy-imports-tid
  "UP",    # https://docs.astral.sh/ruff/rules/#pyupgrade-up
  "W",     # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
]
ignore = [
  "BLE001",  # Do not catch blind exception
  "COM812",  # Trailing comma missing
  "D100",    # Missing docstring in public module
  "D101",    # Missing docstring in public class
  "D102",    # Missing docstring in public method
  "D103",    # Missing docstring in public function
  "D104",    # Missing docstring in public package
  "D105",    # Missing docstring in magic method
  "D106",    # Missing docstring in public nested class
  "D107",    # Missing docstring in __init__
  "D200",    # One-line docstring should fit on one line
  "D202",    # No blank lines allowed after function docstring
  "D203",    # 1 blank line required before class docstring
  "D205",    # 1 blank line required between summary line and description
  "D212",    # Multi-line docstring summary should start at the first line
  "D400",    # First line should end with a period
  "D415",    # First line should end with a period, question mark, or exclamation point
  "PLR0911", # Too many return statements
  "PLR0913", # Too many arguments in function definition
  "Q000",    # Bad quotes inline string
  "S101",    # Use of assert detected
]
